[package]
name = "rabbitmqtest"
version = "0.1.0"
authors = ["Joe Burnard <github.com/ducc>"]
edition = "2018"

[dependencies]
futures-executor = "0.3.5"
futures-util = "0.3.5"
lapin = "1.2.1"
log = "0.4.11"
env_logger = "0.7.1"
tokio-amqp = "0.1.3"
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util", "time"] }
tracing = "0.1.17"
tracing-subscriber = "0.2.8"
tracing-futures = "0.2.4"
prometheus = "0.9.0"
lazy_static = "1.4.0"
prometheus_exporter = "0.5.0"
warp = "0.2"

